<resources>
    <string name="app_name">Shaastra 2017</string>
    <string name="action_settings">Settings</string>
    <string name="home_string">Home</string>
    <string name="events_string">Events</string>
    <string name="workshops_string">Workshops</string>
    <string name="shows_string">Shows</string>
    <string name="summit_string">Summit</string>
    <string name="sponsors_string">Sponsors</string>
    <string name="aboutus_string">About Us</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="intentExtra">target</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="about_string">Shaastra is the annual technical festival of the Indian Institute of Technology - Madras, Chennai, India. With an annual footfall of more than 40,000 visitors and participants, Shaastra is one of the biggest inter-college fests in Asia. It is the only student managed event in the world and the first ever festival to be ISO certified, which is a reflection of the students’ enthusiasm and passion to guarantee the highest standards of quality. Shaastra returns in its 18th edition, bringing with it an enriching experience of innovation, competition and learning that has become its hallmark over the years.Mark the four days from December 31st to January 3rd on your calendars, as Shaastra will keep you engrossed in a plethora of professional shows, competitions, lectures and workshops that have a lot to offer to everybody. With some of the sharpest minds of the nation converging under one banner, one can expect to go back inspired.The classic events of Shaastra shall return bigger and better and be joined by an injection of new exciting competitions. Envisage ​5​.0 will showcase several new acts crafted completely by students.​ Hand in hand, a group of international techno-artists will perform acts that are seldom seen in India and will surely leave you in awe.​ ​Robowars, Hackathon, Aeromodelling and several such competitions will both entertain and challenge the participants. One can also head back indoors to hear some of the pioneers of technology across the globe share their views on the latest happenings of the world. This year, to go hand-in-hand with our theme, Shaastra will be organizing and conducting the Accessibility Summit, to address this almost unnoticed issue in India. The Summit will attempt to remove limitations, tap opportunities and expand various important spheres to accommodate all.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Events</item>
        <item>Workshops</item>
        <item>Shows</item>
        <item>Summit</item>
        <item>Map</item>
        <item>Sponsors</item>
        <item>About Us</item>
    </string-array>
    <string name="spot_name1">Srinivas Mohan</string>
    <string name="spot_name2">Divakar Vaish</string>
    <string name="spot_name3">Kasturirangan</string>
    <string name="spot_name4">Yoshua Bengio</string>
    <string name="spot_name5">Peter Littlewood</string>
    <string name="spot_name6">Srijan Pal Singh</string>
    <string name="spot_name7">R Chidambaram</string>
    <string name="spot_name8">Kartick Sathyanarayan</string>
    <string name="spot_name9">Vijay Amritraj</string>
    <string name="spot_name10">J Gopikrishnan</string>
    <string name="spot_name11">William E Moerner</string>
    <string name="spot_topic1">My journey with VFX technology</string>
    <string name="spot_topic2">Brain cloning and super intelligence</string>
    <string name="spot_topic3">Space Exploration - India\'s Journey</string>
    <string name="spot_topic4">Deep Learning and Artificial Intelligence</string>
    <string name="spot_topic5"> Science of Sustainability</string>
    <string name="spot_topic6">Furturistic Technology</string>
    <string name="spot_topic7">Global Sustainable Development: Role of Science, Technology and Innovation</string>
    <string name="spot_topic8">Saving India\'s Wildlife</string>
    <string name="spot_topic9">A Fire Side Chat</string>
    <string name="spot_topic10">Corporatisation of Media and Media Ethics</string>
    <string name="spot_topic11">Lessons from watching single molecules</string>
    <string name="shows_text">Coming Soon! Stay tuned for updates!</string>
    <string name="envisage_text">Shaastra introduced a technologically aided cultural show 5 years ago - Envisage; which is one of its kind in India. Envisage is a technical marvel as the fusion of art and technology that pleasures your visual senses and overwhelms you with audio effects. Have you ever seen creating images and patterns out of flowing water? Have you ever seen music coming out of empty hands? Have you ever seen a guy dancing turns into amazing graphics? Envisage-5.0 brings you all of it. You are going to feel the pinnacle of entertainment with fascinating technology involved through our projects. It is going to be an exciting and exhilarating experience. Feast your eyes and ears on the enticing projects coming together as a show completely run by students of IIT Madras. After four successful editions of Envisage, this year Shaastra 2017 presents you Envisage-5.0 on Day 1, which is going to be more bigger and better.</string>
    <string name="exhibitions_text">Coming Soon! Stay tuned for updates!</string>
    <string name="summit_FAQ_q1">1. <b>What is Shaastra Summit?</b></string>
    <string name="summit_FAQ_a1">The Shaastra Summit serves as a platform to discuss and ideate on pressing matters in the society and create viable solutions to real world problems. This year, the theme of the summit is Accessibility, where we focus on a broad range of topics ranging from Assistive technology to disability policy.</string>
    <string name="summit_FAQ_q2">2. <b>What does the theme Accessibility mean?</b></string>
    <string name="summit_FAQ_a2">The theme of Summit - Accessibility - focusses on making the world accessible to Persons with Disabilities (PwDs) through the development of technology, services and policy. Accessibility includes basic public services such as infrastructure, transportation, education, communication, etc.</string>
    <string name="summit_FAQ_q3">3. <b>When and where is Summit being held?</b></string>
    <string name="summit_FAQ_a3">The International Accessibility Summit of Shaastra 2017 is a 4 day event and will be conducted between 31st December, 2016 and 3rd January, 2017 at the beautiful campus of IIT Madras in Chennai.</string>
    <string name="summit_FAQ_q4">4. <b>What is the criterion of eligibility?</b></string>
    <string name="summit_FAQ_a4">The Competition is open to all. All we are looking for is interest and enthusiasm. Also, there is no restriction on the stream of study of participants.</string>
    <string name="summit_FAQ_q5">5. <b>What kind of events will the participants be involved in during the summit?</b></string>
    <string name="summit_FAQ_a5">The International Accessibility Summit will host a rare mix of lectures, workshops, a central panel discussion, a trip, informal and ice breaker sessions. The participants will also be provided mentoring sessions from professionals in the field to help with idea development and final presentation.</string>
    <string name="summit_FAQ_q6">6. <b>Does the International Accessibility Summit consist of competitions?</b></string>
    <string name="summit_FAQ_a6">Two competitions will be held as part of Summit - the policy case study competition and the social enterprise challenge. The Summit ends with the best few teams presenting their idea to a panel of judges.</string>
    <string name="summit_FAQ_q7">7. <b>What is the registration process?</b></string>
    <string name="summit_FAQ_a7">All participants will have to fill out an application form followed by a submission of a synopsis or executive summary of their idea depending on their chosen competition. All short-listed candidates will be called for an interview. Please refer to the Registrations page</string>
    <string name="summit_FAQ_q8">8. <b>Is there a fee for participation in the Summit?</b></string>
    <string name="summit_FAQ_a8">Yes, all selected participants are required to pay a registration fee. Note that no fee is to be paid for submitting the application. For fee and payment details refer the Registrations page</string>
    <string name="summit_FAQ_q9">9. <b>Is the registration process different for each competition?</b></string>
    <string name="summit_FAQ_a9">The registration process for each competition is different. Participants for both competitions will have to fill a general application form at the beginning of the registration process.\n\n Case study competition: Participants will have a 2 step selection process. After submission of the application form, the participants have to submit a case study synopsis for a given problem statement. Short-listed participants will be called for an interview.\n\n Social Enterprise competition: Participants will have a 2 step selection process. After submission of the application form, the participants have to submit an executive summary of their idea along with a video presentation. Short-listed candidates will be called for an interview.</string>
    <string name="summit_FAQ_q10">10. <b>How will I know of my selection?</b></string>
    <string name="summit_FAQ_a10">All selected participants will be sent emails regarding selection. The applicants are requested to stay connected through email for all communication during the registration process.</string>
    <string name="summit_FAQ_q11">11. <b>What does Summit offer its participants?</b></string>
    <string name="summit_FAQ_a11">The Accessibility Summit brings to its participants lectures, workshops and a panel discussion from several eminent personalities. It also gives a chance to create an impact and to learn essential skills for developing their idea, along with networking opportunities with the panelists. Through the competitions, participants have a chance of winning cash prizes worth <b>prize money.</b></string>
    <string name="summit_FAQ_q12">12. <b>What are some of the partner organisations associated with the summit?</b></string>
    <string name="summit_FAQ_a12">We have the following organisations as partners for the event:\n Accessible India Campaign\n Department of Empowerment of Persons with Disabilities (DEPwD)\n Deque Systems Inc.\n Center for Internet and Society (CIS)\n EnAble India\n Ability Foundation\n Vidhi Center for Legal Policy\n Vidya Sagar</string>
    <string name="summit_FAQ_q13">13. <b>Would accommodation and food be provided to the participants during the event?</b></string>
    <string name="summit_FAQ_a13">Participants will be provided with food and accommodation at a nominal price. This is over and above the registration fee after selection, and has to be paid before hand.</string>
    <string name="summit_FAQ_q14">14. <b>Will it be required for participants to come to Chennai any time before the summit?</b></string>
    <string name="summit_FAQ_a14">Participants are not required to come to Chennai before the summit. The interview will be conducted over Skype or telephone.</string>
    <string name="summit_FAQ_q15">15. <b>I have a lot of queries, how do I get in touch with the you?</b></string>
    <string name="summit_FAQ_a15">You can contact us at the email address - summitregistrations@shaastra.org. You can also contact Udith Krishna at udithkrishna@shaastra.org and Ramprashanth M at ramprashanth@shaastra.org.</string>
    <string name="map_string">Map</string>
    <string name="feedback_string">Feedback</string>
    <string name="qr_string">QR Scanner</string>
</resources>